--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,10 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
 
+                    <!--* Nav links -->
                     <a class="nav-link" href="{% url 'home' %}">Home</a>
+                    <a class="nav-link" href="{% url 'list' %}">Posts</a>
+                    <a class="nav-link" href="{% url 'create' %}">New Post</a>
                     <a class="nav-link" href="{% url 'about' %}">About</a>
                 
                 </div>
